package creational.singleton.BTA4_VOTE;

public enum Candidate {
    Trump, Biden;
}
