package creational.singleton.BTA4_VOTE;

public class User {
    public void vote(Candidate candidate){

    }
}
