@startuml
'https://plantuml.com/class-diagram
enum Candidate
class Election{
    - {static} Election instance
    - int trump, biden
    - list<String> users
    - Election()
    +{static} Election getInstance()
    + void void vote(Candidate candidate)
    + void result();
}
class User{
    - String name
    + void vote (Candidate candidate)

}
User ..> Election

MainVote *--> User

note left of User::vote
    1.Tao mot instance cua Election
    2.Goi phuong thuc vote tren instance de bau chon
end note

note left of Election
Singleton
end note

note left of Election::vote
if(user khong co UserName)
    them userName vao users
    kiem tra candidate
        neu la trump: tang trump
        nguoc lai: tang biden
end note
@enduml